gradio integration done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "technical_content_writer using crewAI"
 authors = [{ name = "AShish Kumar", email = "ashi.patel546@gmail.com" }]
 requires-python = ">=3.10,<3.13"
 dependencies = [
+    "crewai-tools>=0.45.0",
     "crewai[tools]>=0.120.1,<1.0.0",
+    "fastapi>=0.115.12",
+    "gradio>=5.30.0",
 ]
 
 [project.scripts]
