.sh file added to start application. Readme also updated

--- a/src/technical_content_writer/crews/content_crew/config/agents.yaml
+++ b/src/technical_content_writer/crews/content_crew/config/agents.yaml
@@ -1,6 +1,6 @@
 content_writer:
   role: >
-    Technical Content Writer
+    Technical Content Writer for Linked In Articles.
   goal: >
     Create engaging, informative content that thoroughly explains the assigned topic and provides valuable insights to the reader.
   backstory: >
